--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "Equipe 3",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.3"
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.16.3",
+    "node-fetch": "^3.3.2"
   }
 }
