--- a/package.json
+++ b/package.json
@@ -12,8 +12,18 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "esm": "^3.2.25",
     "express": "^4.16.3",
-    "node-fetch": "^3.3.2"
+    "fs": "^0.0.1-security",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5",
+    "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
+    "sequelize": "^6.35.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
